| Bug #25755 | Error in replication setup can lead to subsequent node failures | ||
|---|---|---|---|
| Submitted: | 22 Jan 2007 16:14 | Modified: | 25 Jan 2007 7:58 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: ClusterRep | Severity: | S3 (Non-critical) |
| Version: | OS: | ||
| Assigned to: | Jonas Oreland | Target Version: | |
[22 Jan 2007 16:14]
Jonas Oreland
[22 Jan 2007 16:26]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/18562 ChangeSet@1.2373, 2007-01-22 17:25:49+01:00, jonas@eel.(none) +2 -0 ndb - bug#25755 Make sure subscriber is removed from list when n_subscribers is decreased
[22 Jan 2007 16:29]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/18563 ChangeSet@1.2374, 2007-01-22 17:29:11+01:00, jonas@eel.(none) +1 -0 ndb - bug#25755 remove accidently left debug prinouts
[22 Jan 2007 16:50]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/18566 ChangeSet@1.2093, 2007-01-22 17:49:14+01:00, jonas@eel.(none) +2 -0 ndb - bug#25755 make sure subscriber is reomved from list, when n_subscribers is decreased (recommit mysql-5.1-wl2325-5.0)
[23 Jan 2007 15:58]
Jonas Oreland
pushed to 5.1-ndb and 5.1-telco
[24 Jan 2007 2:12]
Tomas Ulin
pushed to 5.1.15
[25 Jan 2007 7:58]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at
http://dev.mysql.com/doc/en/installing-source.html
Documented bugfix in 5.1.15 changelog.
